# VIIPER

./: .gitignore  .gitmodules  .markdownlint.json  Makefile  README.md  codecov.yml  go.mod  go.sum  justfile  mkdocs.yml  versions.json  vsc.code-workspace
.github/scripts/: generate-changelog.sh
.github/workflows/: PR_check.yml  build_base.yml  clients_ci.yml  docs-deploy.yml  generate-changelog.yml  release.yml  snapshots.yml
0.0.2/: index.html
0.0.2/changelog/: index.html
0.0.2/search/: search_index.json
0.0.3/changelog/: index.html
0.0.3/search/: search_index.json
0.0.4/changelog/: index.html
0.0.4/search/: search_index.json
0.1.0/changelog/: index.html
0.1.0/search/: search_index.json
0.2.0/changelog/: index.html
0.2.0/search/: search_index.json
0.2.1/: index.html
0.2.1/changelog/: index.html
0.2.1/search/: search_index.json
0.2.2/changelog/: index.html
0.2.2/mkdocs-readme/: index.html
0.2.2/search/: search_index.json
0.3.0/: install.ps1  install.sh
0.3.0/changelog/: index.html
0.3.0/mkdocs-readme/: index.html
0.3.0/search/: search_index.json
0.3.1/: install.ps1  install.sh
0.3.1/changelog/: index.html
0.3.1/search/: search_index.json
0.3.2/: 404.html  install.ps1  install.sh
0.3.2/changelog/: index.html
0.3.2/search/: search_index.json
0.4.0/: index.html  install.ps1  install.sh
0.4.0/changelog/: index.html
0.4.0/mkdocs-readme/: index.html
0.4.0/search/: search_index.json
0.4.1/: index.html  install.ps1  install.sh
0.4.1/changelog/: index.html
0.4.1/mkdocs-readme/: index.html
0.4.1/search/: search_index.json
0.5.0/: 404.html  install.ps1  install.sh
0.5.0/changelog/: index.html
0.5.0/mkdocs-readme/: index.html
0.5.0/search/: search_index.json
0.6.0/: index.html  install.ps1  install.sh
0.6.0/changelog/: index.html
0.6.0/mkdocs-readme/: index.html
0.6.0/search/: search_index.json
0.6.1/: 404.html  install.ps1  install.sh
0.6.1/changelog/: index.html
0.6.1/search/: search_index.json
0.7.0/: install.ps1  install.sh
0.7.0/changelog/: index.html
0.7.0/search/: search_index.json
_testing/: usbip_client.go
_testing/e2e/: bench_test.go
apiclient/: client.go  client_test.go  stream.go  stream_test.go  transport.go  transport_test.go
apitypes/: structs.go
cmd/viiper/: ascii_braille_colored.txt  ascii_braille_colored_sm.txt  meta.go  startup.go  startup_windows.go  viiper.go
dev/search/: search_index.json
device/: context.go  device_attach_test.go  options.go  report.go
device/dualsense/: const.go  descriptor.go  (+7 more)
docs/: index.md
examples/: .gitignore  go.mod
examples/c/virtual_keyboard/: CMakeLists.txt  main.c
examples/c/virtual_x360_pad/: CMakeLists.txt  main.c
examples/libVIIPER/: CMakeLists.txt  main.c
examples/libVIIPER/C/: CMakeLists.txt
examples/libVIIPER/C/ns2pro_cli/: CMakeLists.txt  main.c
examples/libVIIPER/C/xbox360/: CMakeLists.txt
examples/libVIIPER/csharp/: Program.cs  libVIIPER_example.csproj
examples/rust/: Cargo.toml
examples/rust/async/virtual_keyboard/: Cargo.toml
examples/rust/async/virtual_keyboard/src/: main.rs
examples/rust/async/virtual_mouse/: Cargo.toml
examples/rust/async/virtual_mouse/src/: main.rs
examples/rust/async/virtual_x360_pad/: Cargo.toml
examples/rust/async/virtual_x360_pad/src/: main.rs
examples/rust/sync/virtual_keyboard/: Cargo.toml
examples/rust/sync/virtual_keyboard/src/: main.rs
examples/rust/sync/virtual_mouse/: Cargo.toml
examples/rust/sync/virtual_mouse/src/: main.rs
examples/rust/sync/virtual_x360_pad/: Cargo.toml
examples/rust/sync/virtual_x360_pad/src/: main.rs
main/: 404.html  index.html  install.ps1  install.sh
scripts/: inject-version.ps1  install.ps1  install.sh  licenses.tpl  viiper-api.ps1  viiper-api.sh
testing/: test_server.go  usbip_client.go
usb/: device.go  usbdesc.go
viiper/: go.mod  go.sum
viiperclient/: client.go
virtualbus/: virtualbus.go
(+470 files in other folders)
